fixed currency for new api

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3609,3 +3609,11 @@ input, select, textarea {
 			}
 
 		}
+
+		.isDisabled {
+			color: currentColor;
+			cursor: not-allowed;
+			opacity: 0.5;
+			text-decoration: none;
+			pointer-events: none;
+		  }
